Fixed layout issues in CSS. Updated styling for SetupView.

--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,23 @@
-body {
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
+} */
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+        monospace;
+
+    padding: 7px;
+    border-radius: 5px;
+    background-color: rgb(247, 248, 250);
+    color: black !important;
 }
 
-#root {
+#user-scans-root {
     padding: 20px 50px;
 }
 
@@ -37,4 +42,4 @@ code {
     /* box-shadow: 0 5px #666; */
     transform: translateY(3px);
     /* background-color: blue !important; */
-  }
+}
